# unrar.rs

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml
benches/: extract_benchmark.rs
docs/: 2026-04-15_batch-extraction-performance-optimization.md
examples/: basic_extract.rs  basic_list.rs  batch_extract.rs  lister.rs  read_named.rs
src/: archive.rs  error.rs  lib.rs  locale.rs  open_archive.rs
src/pathed/: all.rs  linux.rs
tests/: archiveflags.rs  crypted.rs  error_codes.rs  extract_all_callback.rs  multipart.rs  packed_layout.rs  simple.rs  utf8.rs
unrar_sys/: Cargo.toml  build.rs
unrar_sys/examples/: lister.rs
unrar_sys/src/: lib.rs
