[package]
name = "unrar-ng"
version = "0.6.0"
authors = [
  "Danyel Bayraktar <rust@danyel.io>",
  "vjoki <vjoki@zv.fi>",
  "ttys3 <41882455+ttys3@users.noreply.github.com>",
]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "list and extract RAR archives. Actively maintained fork of unrar."
repository = "https://github.com/ttys3/unrar.rs"
include = [
    "/src/**/*.rs",
    "/examples/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[lib]
name = "unrar"

[dependencies]
regex = "1"
bitflags = "2"
widestring = "1"

[dependencies.unrar_sys]
path = "unrar_sys"
package = "unrar-ng-sys"
version = "0.6.0"

[dev-dependencies]
tempfile = "3.12.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "extract_benchmark"
harness = false
