[package]
name = "unrar-ng"
version = "0.7.2"
authors = [
  "Danyel Bayraktar <rust@danyel.io>",
  "vjoki <vjoki@zv.fi>",
  "ttys3 <41882455+ttys3@users.noreply.github.com>",
]
edition = "2024"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
description = "list and extract RAR archives. Actively maintained fork of unrar."
repository = "https://github.com/ttys3/unrar.rs"
include = [
    "/src/**/*.rs",
    "/examples/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[lib]
name = "unrar_ng"

[dependencies]
regex = "1"
bitflags = "2"
widestring = "1"

[dependencies.unrar_ng_sys]
path = "unrar_sys"
package = "unrar-ng-sys"
version = "0.7.2"

[dev-dependencies]
tempfile = "3.12.0"
criterion = { version = "0.5", features = ["html_reports"] }
# Direct dev-dep so the packed-layout regression test in tests/packed_layout.rs
# can call the raw FFI (otherwise integration tests cannot `use unrar_ng_sys::*`).
unrar_ng_sys = { path = "unrar_sys", package = "unrar-ng-sys", version = "0.7.2" }

[[bench]]
name = "extract_benchmark"
harness = false
