[package]
name = "unrar-ng-sys"
version = "0.6.2"
authors = [
  "Danyel Bayraktar <rust@danyel.io>",
  "ttys3 <41882455+ttys3@users.noreply.github.com>",
]

build = "build.rs"
license = "MIT OR Apache-2.0"
description = "FFI bindings to unrar (with minimal abstractions). Actively maintained fork of unrar_sys."
repository = "https://github.com/ttys3/unrar.rs"
edition = "2021"
rust-version = "1.94"

[lib]
name = "unrar_ng_sys"

[features]
default = ["std"]
std = ["libc/std", "winapi/std"]

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "ntdef"] }
